--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,116 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Globe Pocket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.5.10/dist/vuetify.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.5.10/dist/vuetify.min.js"></script> -->
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
+    <header class="header d-flex">
+        <div class="logo">
+            <p class="logo-img" src="" alt="">
+        </div>
+        <div class="navbar d-flex">
+            <a class="link-header" href="./index.html">Accueil</a>
+            <p class="link-header">Pays</p>
+            <p class="link-header">Activités</p>
+            <p class="link-header">Transports</p>
+            <p class="link-header">Hébergements</p>
+            <p class="link-header">Locations</p>
+        </div>
+        <div class="compte">
+            <p class="compte-img" src="" alt="">
+        </div>
+    </header>
+    <div class="head">
+        <div class="carousel">
+            <div class="carousel-images">
+                <img src="/public/assests/voyage-2.png" alt="Image 2">
+                <img src="/public/assets/voyage-1.png" alt="Image 1">
+            </div>
+            <div class="en-tete">
+                <p class="title">Suivez vos envies</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+<style scss scoped>
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    a{
+        text-decoration: none;
+    }
+    .header{
+        background-color: #7BB27F;
+        width: 100%;
+        height: 60px;
+        .logo{
+            width: 20%;
+            .logo-img{
+                border-radius: 100%;
+                background-color: grey;
+                width: 50px;
+                height: 50px;
+                margin: 5px;
+            }
+        }
+        .navbar{
+            margin-left: auto;
+            width: 60%;
+            .link-header{
+                color: black;
+                padding-right: 5px;
+                margin: 0%;
+            }
+        }
+        .compte{
+            width: 15%;
+            .compte-img{
+                border-radius: 100%;
+                background-color: rgb(34, 34, 204);
+                width: 50px;
+                height: 50px;
+                margin: 5px 10px;
+                float: right;
+            }
+        }
+    }
+    .head{
+        .carousel{
+            /*width: 400px;
+            height: 250px;
+            overflow: hidden;
+            position: relative;*/
+            .carousel-images {
+                display: flex;
+                width: 200%;
+                animation: slide 4s infinite alternate ease-in-out;
+            }
+            .carousel img {
+                width: 100%;
+                height: auto;
+            }
+            @keyframes slide {
+                0% { transform: translateX(0); }
+                100% { transform: translateX(-50%); }
+            }
+        }
+        .en-tete{
+            width: 40%;
+            background-color: rgb(158, 158, 158);
+            border-radius: 50px;
+            margin-top: 15%;
+            margin-left: 30%;
+            .title{
+                color: white;
+                font-size: 50px;
+                text-align: center;
+            }
+        }
+    }
+</style>
