--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Globe Pocket</title>
+    <link rel="icon" href="/assests/logo.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.5.10/dist/vuetify.min.js"></script> -->
@@ -29,13 +30,21 @@
     </header>
     <div class="head">
         <div class="carousel">
-            <div class="carousel-images">
-                <img src="/public/assests/voyage-2.png" alt="Image 2">
-                <img src="/public/assets/voyage-1.png" alt="Image 1">
-            </div>
+            <!-- <div class="carousel-image"> -->
+                <img class="carousel-images" src="/assests/voyage-2.png" alt="Image 2">
+                <img src="/assets/voyage-1.png" alt="Image 1">
+             <!--</div>-->
             <div class="en-tete">
                 <p class="title">Suivez vos envies</p>
             </div>
+        </div>
+    </div>
+    <div class="globe">
+        <div class="texte">
+
+        </div>
+        <div class="img">
+            <img class="img-globe" src="/assests/earth.jpg" alt="">
         </div>
     </div>
 </body>
@@ -85,15 +94,17 @@
         }
     }
     .head{
-        .carousel{
-            /*width: 400px;
+        /*.carousel{
+            width: 400px;
             height: 250px;
             overflow: hidden;
             position: relative;*/
             .carousel-images {
                 display: flex;
+                position: fixed;
                 width: 200%;
                 animation: slide 4s infinite alternate ease-in-out;
+                z-index: 1;
             }
             .carousel img {
                 width: 100%;
@@ -105,16 +116,18 @@
             }
         }
         .en-tete{
+            position: fixed;
             width: 40%;
             background-color: rgb(158, 158, 158);
             border-radius: 50px;
-            margin-top: 15%;
+            margin-top: 20%;
             margin-left: 30%;
+            z-index: 10000;
             .title{
                 color: white;
                 font-size: 50px;
                 text-align: center;
             }
         }
-    }
+    /*}*/
 </style>
